# HPA-SingleCellClassification

./: .gitignore  Infutor.html  README.md  embed.txt  pyproject.toml  requirements.txt  setup.cfg
src/train/: augment.py  constants.py  get_model.py  helpers.py  pipeline.py  set_unet_model.py
src/utils/: create_tfrecord.py  download_files.py  get_images.ipynb  get_masks.py  parse_example.py
tests/: HPA_testingNotebook.ipynb  test-create_tfrecord.py  test.py  test_download_files_and_get_images.py  test_download_images_and_save_masks.py
