[metadata]
name = HPA-SingleCellClassifier
version = 0.0.1
author = Adrian Bratu
author_email = adrian.bratu@live.com
description = The Human Protein Atlas - Single cell classifier competition - 2021
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shiftmark/HPA-SingleCellClassification
project_urls =
    Bug Tracker = https://github.com/shiftmark/HPA-SingleCellClassification/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src